--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -844,6 +844,7 @@
                                         <rect key="frame" x="330" y="0.0" width="45" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="45" id="Kjd-Sh-KM7"/>
+                                            <constraint firstAttribute="width" secondItem="ClS-Vk-bw0" secondAttribute="height" multiplier="45:56" id="Y12-bq-hhp"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <state key="normal" title="Send">
